force-app/main/default/objects/Contrato2__c/Contrato2__c.object-meta.xml
<CustomObject>
    <description>Objeto que permite el guardado de los contratos por ADV</description>
    <label>Administración de Venta</label>
    <nameField>
        <label>Nombre de Contrato 2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Administración de Ventas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>