force-app/main/default/objects/Contrato2__c/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <label>Afiliado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>