force-app/main/default/objects/Contrato2__c/fields/affiliateProduct__c.field-meta.xml
<CustomField>
    <fullName>affiliateProduct__c</fullName>
    <label>Productos Afiliados Papel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurante</fullName>
            </value>
            <value>
                <fullName>Vestimenta</fullName>
            </value>
            <value>
                <fullName>Regalo</fullName>
            </value>
            <value>
                <fullName>Despensa Sector Público</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>