force-app/main/default/objects/Contrato2__c/fields/AggregatorTerminal__c.field-meta.xml
<CustomField>
    <fullName>AggregatorTerminal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Agregador</label>
    <type>Checkbox</type>
</CustomField>