force-app/main/default/objects/Contrato2__c/fields/AmountDomiciliation__c.field-meta.xml
<CustomField>
    <fullName>AmountDomiciliation__c</fullName>
    <label>Importe Domiciliación</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>