force-app/main/default/objects/Contrato2__c/fields/AmountFixedDomiciliation__c.field-meta.xml
<CustomField>
    <fullName>AmountFixedDomiciliation__c</fullName>
    <formula>IF(IsFixedAmount__c,  AmountDomiciliation__c , null)</formula>
    <label>Importe Domiciliación Fijo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>