force-app/main/default/objects/Contrato2__c/fields/AmountType__c.field-meta.xml
<CustomField>
    <fullName>AmountType__c</fullName>
    <label>Tipo de Importe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIjo</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>