force-app/main/default/objects/Contrato2__c/fields/AmountVariableDomiciliation__c.field-meta.xml
<CustomField>
    <fullName>AmountVariableDomiciliation__c</fullName>
    <formula>IF(IsVariableAmount__c,  AmountDomiciliation__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Domiciliación Variable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>