force-app/main/default/objects/Contrato2__c/fields/APartirDe__c.field-meta.xml
<CustomField>
    <fullName>APartirDe__c</fullName>
    <description>Mantenimiento. Inicio de cobro de fee por vehiculo</description>
    <label>A partir de</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 mes</fullName>
            </value>
            <value>
                <fullName>2 meses</fullName>
            </value>
            <value>
                <fullName>3 meses</fullName>
            </value>
            <value>
                <fullName>4 meses</fullName>
            </value>
            <value>
                <fullName>5 meses</fullName>
            </value>
            <value>
                <fullName>6 meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>