force-app/main/default/objects/Contrato2__c/fields/AsignacionContrato__c.field-meta.xml
<CustomField>
    <fullName>AsignacionContrato__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Asignación Contrato</label>
    <type>AutoNumber</type>
</CustomField>