force-app/main/default/objects/Contrato2__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>Administración de Ventas</relationshipLabel>
    <relationshipName>Administraci_n_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>