force-app/main/default/objects/Contrato2__c/fields/BankingTerminal__c.field-meta.xml
<CustomField>
    <fullName>BankingTerminal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Bancaria</label>
    <type>Checkbox</type>
</CustomField>