force-app/main/default/objects/Contrato2__c/fields/bill__c.field-meta.xml
<CustomField>
    <fullName>bill__c</fullName>
    <formula>IF(Domiciliation__c, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factura</label>
    <type>Checkbox</type>
</CustomField>