force-app/main/default/objects/Contrato2__c/fields/billingEmail__c.field-meta.xml
<CustomField>
    <fullName>billingEmail__c</fullName>
    <label>E-mail para facturación</label>
    <type>Email</type>
</CustomField>