force-app/main/default/objects/Contrato2__c/fields/BombaPropia__c.field-meta.xml
<CustomField>
    <fullName>BombaPropia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bomba Propia Autoconsumo</label>
    <type>Checkbox</type>
</CustomField>