force-app/main/default/objects/Contrato2__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Sucursal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>