force-app/main/default/objects/Contrato2__c/fields/Caducidad_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Caducidad_Saldo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caducidad Saldo</label>
    <type>Checkbox</type>
</CustomField>