force-app/main/default/objects/Contrato2__c/fields/CamposValidados__c.field-meta.xml
<CustomField>
    <fullName>CamposValidados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campos Validados</label>
    <type>Checkbox</type>
</CustomField>