force-app/main/default/objects/Contrato2__c/fields/CancelacionContrato__c.field-meta.xml
<CustomField>
    <fullName>CancelacionContrato__c</fullName>
    <label>Cancelacion Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>