force-app/main/default/objects/Contrato2__c/fields/CartaStandBy__c.field-meta.xml
<CustomField>
    <fullName>CartaStandBy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carta Stand By</label>
    <type>Checkbox</type>
</CustomField>