force-app/main/default/objects/Contrato2__c/fields/CentroCostosPorcentaje_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>CentroCostosPorcentaje_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Centro de Costos c/Porcentaje</label>
    <type>Checkbox</type>
</CustomField>