force-app/main/default/objects/Contrato2__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <label>CEO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grupo de Región</fullName>
            </value>
            <value>
                <fullName>Región</fullName>
            </value>
            <value>
                <fullName>Centro de Costos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>