force-app/main/default/objects/Contrato2__c/fields/Chain__c.field-meta.xml
<CustomField>
    <fullName>Chain__c</fullName>
    <label>Cadena</label>
    <length>10</length>
    <type>Text</type>
</CustomField>