force-app/main/default/objects/Contrato2__c/fields/Cliente_Facturacion_Global__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Facturacion_Global__c</fullName>
    <label>Cliente Facturación Global</label>
    <length>255</length>
    <type>Text</type>
</CustomField>