force-app/main/default/objects/Contrato2__c/fields/Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner__c</fullName>
    <description>Es tru si es el propietario de ADV</description>
    <formula>IF(  Ejecutivo_ADV__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-Owner</label>
    <type>Checkbox</type>
</CustomField>