force-app/main/default/objects/Contrato2__c/fields/CodigoAS400__c.field-meta.xml
<CustomField>
    <fullName>CodigoAS400__c</fullName>
    <label>Código AS400/Id. OPAM</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>