force-app/main/default/objects/Contrato2__c/fields/Combustibles_akron__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_akron__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akron Regular</fullName>
            </value>
            <value>
                <fullName>Akron Ultra</fullName>
            </value>
            <value>
                <fullName>Akron Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>