force-app/main/default/objects/Contrato2__c/fields/Combustibles_bp__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_bp__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BP Regular</fullName>
            </value>
            <value>
                <fullName>BP Premium</fullName>
            </value>
            <value>
                <fullName>BP Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>