force-app/main/default/objects/Contrato2__c/fields/Combustibles_chevron__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_chevron__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chevron Regular</fullName>
            </value>
            <value>
                <fullName>Chevron Supreme</fullName>
            </value>
            <value>
                <fullName>Chevron Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>