force-app/main/default/objects/Contrato2__c/fields/Combustibles_conapesca__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_conapesca__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Magna</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Magna Ribereña</fullName>
            </value>
            <value>
                <fullName>Diesel Marino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>