force-app/main/default/objects/Contrato2__c/fields/Combustibles_durafuel__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_durafuel__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rendi Ultra</fullName>
            </value>
            <value>
                <fullName>Rendi Mega</fullName>
            </value>
            <value>
                <fullName>Hiperdiesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>