force-app/main/default/objects/Contrato2__c/fields/Combustibles_g500__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_g500__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G Super</fullName>
            </value>
            <value>
                <fullName>G Premium</fullName>
            </value>
            <value>
                <fullName>G Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>