force-app/main/default/objects/Contrato2__c/fields/Combustibles_gas__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_gas__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas LP</fullName>
            </value>
            <value>
                <fullName>Gas Natural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>