force-app/main/default/objects/Contrato2__c/fields/Combustibles_gulf__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_gulf__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gulf 87</fullName>
            </value>
            <value>
                <fullName>Gulf 92</fullName>
            </value>
            <value>
                <fullName>Gulf Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>