force-app/main/default/objects/Contrato2__c/fields/Combustibles_mobil__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_mobil__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobil Extra</fullName>
            </value>
            <value>
                <fullName>Mobil Supreme</fullName>
            </value>
            <value>
                <fullName>Mobil Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>