force-app/main/default/objects/Contrato2__c/fields/Combustibles_repsol__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_repsol__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repsol Efitec 92</fullName>
            </value>
            <value>
                <fullName>Repsol Efitec92</fullName>
            </value>
            <value>
                <fullName>Repsol Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>