force-app/main/default/objects/Contrato2__c/fields/Combustibles_shell__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_shell__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shell Regular</fullName>
            </value>
            <value>
                <fullName>Shell V-Power</fullName>
            </value>
            <value>
                <fullName>Shell Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>