force-app/main/default/objects/Contrato2__c/fields/Combustibles_total__c.field-meta.xml
<CustomField>
    <fullName>Combustibles_total__c</fullName>
    <label>Combustibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasolina Regular</fullName>
            </value>
            <value>
                <fullName>Excellium Gasolina</fullName>
            </value>
            <value>
                <fullName>Diesel Regular</fullName>
            </value>
            <value>
                <fullName>Diesel Excellium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>