force-app/main/default/objects/Contrato2__c/fields/Comentarios_ADV__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_ADV__c</fullName>
    <label>Comentarios Administracion de Ventas</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>