force-app/main/default/objects/Contrato2__c/fields/ComisionMinima__c.field-meta.xml
<CustomField>
    <fullName>ComisionMinima__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comisión Mínima</label>
    <type>Checkbox</type>
</CustomField>