force-app/main/default/objects/Contrato2__c/fields/ComoFactura__c.field-meta.xml
<CustomField>
    <fullName>ComoFactura__c</fullName>
    <label>Cómo Factura</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empresa</fullName>
            </value>
            <value>
                <fullName>Consolidador</fullName>
            </value>
            <value>
                <fullName>Grupo de Facturación</fullName>
            </value>
            <value>
                <fullName>Grupo de Región</fullName>
            </value>
            <value>
                <fullName>Región</fullName>
            </value>
            <value>
                <fullName>Centro de Costos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>