force-app/main/default/objects/Contrato2__c/fields/CondicionesPago__c.field-meta.xml
<CustomField>
    <fullName>CondicionesPago__c</fullName>
    <label>Condiciones de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumo</fullName>
            </value>
            <value>
                <fullName>Pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>