force-app/main/default/objects/Contrato2__c/fields/Consolidador__c.field-meta.xml
<CustomField>
    <fullName>Consolidador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidador</label>
    <type>Checkbox</type>
</CustomField>