force-app/main/default/objects/Contrato2__c/fields/ConstanciaInscripcionRFC__c.field-meta.xml
<CustomField>
    <fullName>ConstanciaInscripcionRFC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constancia Inscripcion RFC</label>
    <type>Checkbox</type>
</CustomField>