force-app/main/default/objects/Contrato2__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Administraci_n_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>