force-app/main/default/objects/Contrato2__c/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <formula>TEXT(DAY(datevalue(CreatedDate))) + &quot;/&quot; + TEXT(MONTH(datevalue(CreatedDate))) + &quot;/&quot;  + TEXT(YEAR(datevalue(CreatedDate)))</formula>
    <label>Fecha  Contrato</label>
    <type>Text</type>
</CustomField>