force-app/main/default/objects/Contrato2__c/fields/Controla_Presencia_Vehiculo_NFC__c.field-meta.xml
<CustomField>
    <fullName>Controla_Presencia_Vehiculo_NFC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Controla Presencia Vehículo NFC</label>
    <type>Checkbox</type>
</CustomField>