force-app/main/default/objects/Contrato2__c/fields/ControlVolumetrico__c.field-meta.xml
<CustomField>
    <fullName>ControlVolumetrico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Control Volumétrico</label>
    <type>Checkbox</type>
</CustomField>