force-app/main/default/objects/Contrato2__c/fields/ConventionalTerminal__c.field-meta.xml
<CustomField>
    <fullName>ConventionalTerminal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Convencional</label>
    <type>Checkbox</type>
</CustomField>