force-app/main/default/objects/Contrato2__c/fields/Correo_Adicional_Factura__c.field-meta.xml
<CustomField>
    <fullName>Correo_Adicional_Factura__c</fullName>
    <label>Correo Adicional Factura</label>
    <type>Email</type>
</CustomField>