force-app/main/default/objects/Contrato2__c/fields/CorreoRecibeFactura__c.field-meta.xml
<CustomField>
    <fullName>CorreoRecibeFactura__c</fullName>
    <label>Correo que Recibe la Factura</label>
    <type>Email</type>
</CustomField>