force-app/main/default/objects/Contrato2__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Administraci_n_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>