force-app/main/default/objects/Contrato2__c/fields/CuotaLitros_Currency__c.field-meta.xml
<CustomField>
    <fullName>CuotaLitros_Currency__c</fullName>
    <label>Cuota por Litros</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>