force-app/main/default/objects/Contrato2__c/fields/CuotaLitrosLetra_Text__c.field-meta.xml
<CustomField>
    <fullName>CuotaLitrosLetra_Text__c</fullName>
    <label>Cuota por Litros en Letra</label>
    <length>250</length>
    <type>Text</type>
</CustomField>