force-app/main/default/objects/Contrato2__c/fields/CuotaMensual_Currency__c.field-meta.xml
<CustomField>
    <fullName>CuotaMensual_Currency__c</fullName>
    <label>Cuota Mensual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>