force-app/main/default/objects/Contrato2__c/fields/CuotaMensualLetra_Text__c.field-meta.xml
<CustomField>
    <fullName>CuotaMensualLetra_Text__c</fullName>
    <label>Cuota Mensual en Letra</label>
    <length>250</length>
    <type>Text</type>
</CustomField>