force-app/main/default/objects/Contrato2__c/fields/CustomersCreatedAS400__c.field-meta.xml
<CustomField>
    <fullName>CustomersCreatedAS400__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clientes Creados en AS400</label>
    <type>Checkbox</type>
</CustomField>