force-app/main/default/objects/Contrato2__c/fields/CuttingDayFri__c.field-meta.xml
<CustomField>
    <fullName>CuttingDayFri__c</fullName>
    <formula>IF(INCLUDES( CuttingDays__c, &quot;Viernes&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de Corte Viernes</label>
    <type>Checkbox</type>
</CustomField>