force-app/main/default/objects/Contrato2__c/fields/CuttingDayMon__c.field-meta.xml
<CustomField>
    <fullName>CuttingDayMon__c</fullName>
    <formula>IF(INCLUDES( CuttingDays__c, &quot;Lunes&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de Corte Lunes</label>
    <type>Checkbox</type>
</CustomField>