force-app/main/default/objects/Contrato2__c/fields/CuttingDayThu__c.field-meta.xml
<CustomField>
    <fullName>CuttingDayThu__c</fullName>
    <formula>IF(INCLUDES( CuttingDays__c, &quot;Jueves&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de Corte Jueves</label>
    <type>Checkbox</type>
</CustomField>