force-app/main/default/objects/Contrato2__c/fields/CuttingDayTue__c.field-meta.xml
<CustomField>
    <fullName>CuttingDayTue__c</fullName>
    <formula>IF(INCLUDES( CuttingDays__c, &quot;Martes&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de Corte Martes</label>
    <type>Checkbox</type>
</CustomField>