force-app/main/default/objects/Contrato2__c/fields/CuttingDayWed__c.field-meta.xml
<CustomField>
    <fullName>CuttingDayWed__c</fullName>
    <formula>IF(INCLUDES( CuttingDays__c, &quot;Miércoles&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de Corte Miércoles</label>
    <type>Checkbox</type>
</CustomField>