force-app/main/default/objects/Contrato2__c/fields/DateAmountDomiciliation__c.field-meta.xml
<CustomField>
    <fullName>DateAmountDomiciliation__c</fullName>
    <label>Fecha Cargo Domiciliación</label>
    <type>Date</type>
</CustomField>