force-app/main/default/objects/Contrato2__c/fields/DateAmountDomiciliationFormat__c.field-meta.xml
<CustomField>
    <fullName>DateAmountDomiciliationFormat__c</fullName>
    <formula>TEXT( DAY(  DateAmountDomiciliation__c ) ) &amp; &quot;/&quot; &amp; 
TEXT( MONTH( DateAmountDomiciliation__c ) ) &amp; &quot;/&quot; &amp; 
TEXT( YEAR( DateAmountDomiciliation__c ) )</formula>
    <label>Fecha Cargo Domiciliación</label>
    <type>Text</type>
</CustomField>